--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scriptease",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "ScriptEase is a powerful tool that allows for easy management and execution of npm scripts, written in JavaScript, on any operating system, enabling the creation of complex scripts",
   "main": "./dist/src/public/pubScriptEase.js",
   "types": "./dist/src/public/pubScriptEase.d.ts",
@@ -15,7 +15,8 @@
     "lint": "eslint --ext .ts src/",
     "precommit": "npm run format",
     "commit": "git-cz",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "semantic-release": "semantic-release"
   },
   "keywords": [
     "npm",
@@ -60,6 +61,11 @@
     "prettier": "^2.8.4",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "semantic-release": "^20.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TheSnowyxGIT/ScriptEase.git"
   }
 }
