--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["adrien", "Eachhook", "Hookable", "Oncehook", "pingard", "precommit"]
+  "cSpell.words": ["adrien", "commitlint", "Eachhook", "Hookable", "Oncehook", "pingard", "precommit"]
 }
