--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "cover": "nyc npm run test",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint --ext .ts src/",
-    "precommit": "npm run format",
-    "commit": "git-cz",
+    "lintFix": "eslint --fix --ext .ts src/",
     "prepare": "husky install",
     "semantic-release": "semantic-release"
   },
@@ -40,6 +39,8 @@
     "yargs": "^17.6.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
     "@types/fs-extra": "^11.0.1",
@@ -50,6 +51,7 @@
     "@typescript-eslint/parser": "^5.53.0",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.34.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -59,13 +61,18 @@
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "prettier": "^2.8.4",
+    "semantic-release": "^20.1.0",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "semantic-release": "^20.1.0"
+    "typescript": "^4.9.5"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/TheSnowyxGIT/ScriptEase.git"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
