build(packagejson): add semantic-release deps

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "yargs": "^17.6.2"
   },
   "devDependencies": {
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.7",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@types/chai": "^4.3.4",
