--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "types": ["node", "mocha"],
     "noImplicitAny": false
   },
-  "include": ["src/**/*", "test/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
