feat(results): add results, binnary, crash gestion

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.words": ["adrien", "commitlint", "Eachhook", "Hookable", "Oncehook", "pingard", "precommit"]
+  "cSpell.words": [
+    "adrien",
+    "commitlint",
+    "Eachhook",
+    "Hookable",
+    "NOTEXECUTED",
+    "NOVALID",
+    "Oncehook",
+    "pingard",
+    "precommit"
+  ]
 }
