--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "eslint --ext .ts src/",
     "lintFix": "eslint --fix --ext .ts src/",
     "prepare": "husky install",
-    "semantic-release": "semantic-release --branches main"
+    "semantic-release": "semantic-release"
   },
   "keywords": [
     "npm",
