--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -37,10 +37,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          registry-url: https://registry.npmjs.org/
       - run: npm ci
       - run: npm run build
-      - run: npm run semantic-release
+      - name: Run Semantic Release
+        if: ${{ secrets.AT_TOKEN != '' && secrets.NPM_AUTOMATION_TOKEN != '' }}
+        run: npm run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.AT_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_AUTOMATION_TOKEN }}
