--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "test": "ts-mocha test/**/*.spec.ts test/*.spec.ts",
-    "cover": "nyc npm run test",
+    "test": "jest",
+    "cover": "jest --coverage",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint --ext .ts src/",
     "lintFix": "eslint --fix --ext .ts src/",
@@ -49,7 +49,7 @@
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
     "@types/fs-extra": "^11.0.1",
-    "@types/mocha": "^10.0.1",
+    "@types/jest": "^29.5.2",
     "@types/node": "^18.14.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
@@ -62,11 +62,10 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
-    "mocha": "^10.2.0",
-    "nyc": "^15.1.0",
+    "jest": "^29.5.0",
     "prettier": "^2.8.4",
     "semantic-release": "^20.1.0",
-    "ts-mocha": "^10.0.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
