--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,9 @@ name: Pull Request Testing and Linting
 
 on:
   pull_request:
-    branches: ['master']
+    branches: ['*']
+  push:
+    branches: ['*']
 
 jobs:
   build:
@@ -34,4 +36,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: npm ci
-      - run: npm run test
+      - run: npm run cover
+      - run: npm run coveralls
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
