--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "tsc && rm -rf dist/test",
     "test": "jest",
     "cover": "jest --coverage",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint --ext .ts src/",
     "lintFix": "eslint --fix --ext .ts src/",
@@ -55,6 +56,7 @@
     "@typescript-eslint/parser": "^5.53.0",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
+    "coveralls": "^3.1.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.34.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
