--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,43 +4,53 @@ on:
   push:
     branches: ['master']
 
+concurrency: ${{ github.workflow }}-${{ github.ref }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x]
-
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18.x
           cache: 'npm'
       - run: npm ci
       - run: npm run build --if-present
       - run: npm run lint
       - run: npm test
 
-  publish-npm:
+  release:
+    name: Release
     needs: build
     runs-on: ubuntu-latest
     permissions:
-      contents: write
-      issues: write
+      #contents: write
+      #issues: write
       pull-requests: write
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: 18
-      - run: npm ci
-      - run: npm run build
-      - name: Run Semantic Release
-        run: npm run semantic-release
+          node-version: 18.x
+          cache: 'npm'
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build
+
+      - name: Create Release Pull Request or Publish to npm
+        id: changesets
+        uses: changesets/action@v1
+        with:
+          publish: npm run release
         env:
-          GITHUB_TOKEN: ${{ secrets.AT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_AUTOMATION_TOKEN }}
