--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scriptease-cli",
-  "version": "0.0.0-development",
+  "version": "2.1.0",
   "description": "ScriptEase is a powerful tool that allows for easy management and execution of npm scripts, written in JavaScript, on any operating system, enabling the creation of complex scripts",
   "main": "./dist/src/public/pubScriptEase.js",
   "types": "./dist/src/public/pubScriptEase.d.ts",
@@ -12,14 +12,14 @@
   },
   "scripts": {
     "build": "tsc && rm -rf dist/test",
+    "release": "changeset publish",
     "test": "jest",
     "cover": "jest --coverage",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint --ext .ts src/",
     "lintFix": "eslint --fix --ext .ts src/",
-    "prepare": "husky install",
-    "semantic-release": "semantic-release"
+    "prepare": "husky install"
   },
   "keywords": [
     "npm",
@@ -37,6 +37,7 @@
   "author": "adrien pingard",
   "license": "MIT",
   "dependencies": {
+    "@changesets/cli": "^2.26.2",
     "chalk": "^4.1.2",
     "commander": "^10.0.0",
     "findup-sync": "^5.0.0",
@@ -66,7 +67,6 @@
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "prettier": "^2.8.4",
-    "semantic-release": "^20.1.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
