--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "chalk": "^4.1.2",
     "commander": "^10.0.0",
     "findup-sync": "^5.0.0",
-    "fs-extra": "^11.1.0"
+    "fs-extra": "^11.1.0",
+    "didyoumean2": "^6.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
